# rag-lab

./: .env.example  .gitignore  .pre-commit-config.yaml  GLOSSARY.md  LICENSE  LICENSE-docs  NOTES.md  README.md  pyproject.toml  rag.py  requirements.txt
docs/: azure_pangolin.txt  helix3000.txt  mistvale.txt
garbage-disposal-rag/: .gitignore  NOTE.md  README.md  build_index_v2.py  constant.py  diff_summary.md  diff_summary.py  embed_smoke.py  gold_template.json  goldenset_template.json  helper.py  inspection_report.md  observation_summary.md  observe.py  observe_v2.py  ota_gomi_rag.py  pyproject.toml  rag.py  requirements.txt  sample_rag.py  score_baseline.py  scoring_baseline.csv  scoring_summary.md  scoring_v2.csv  scoring_v2_summary.md  test.py  validate_gold.py  validate_goldenset.py
glossary/: GLOSSARY.md  lost-in-the-middle.md
minimal-rag/: NOTE.md  README.md  pyproject.toml  rag.py
