[project]
name = "minimal-rag"
version = "0.1.0"
description = "最小RAGを素コードで7段体感する学習用スクリプト"
requires-python = "==3.14.*"
dependencies = [
    "anthropic",     # 生成（Claude Messages API）用の公式SDK
    "requests",      # 埋め込み（Voyage AI REST）を直接叩く用
    "python-dotenv", # .env から API キーを読む用
]

# スクリプト集であり配布パッケージではない。依存だけ .venv に入れる。
# ルート(rag-lab)とは独立した uv プロジェクト。
[tool.uv]
package = false
